# 0x646A

./: .env.example  .gitignore  package.json  pyproject.toml
common/articles/: apps.py  models.py  serializers.py  validators.py  views.py
common/articles/migrations/: 0001_initial.py
common/pages/: apps.py  views.py
core/: settings.py  urls.py
static/css/: tailwind.css
static/js/: index.js
templates/: base.html
templates/common/: root.html  slug.html
