[tool.poetry]
name = "0x646a"
version = "0.1.0"
description = ""
authors = ["pavelixo <pavelixo@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
django-redis = "^5.4.0"
channels = "^4.2.0"
daphne = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
